# nebius-cookbook

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md  bunfig.toml  licence.md  package.json  tsconfig.json
.claude/: settings.json
.github/: cookbook-clever-config.example.json  cookbook-clever-config.json
README/: 01-intro.md  02-blueprints.md  03-getting-started.md  04-contributing.md  05-stack.md  99-license-credits.md  _config.json
app/: .env.example  eslint.config.mjs  next.config.mjs  package.json  tsconfig.json
blueprints/sentinel-compliance-auditor/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  blueprint.json  langgraph.json  pyproject.toml
blueprints/sentinel-compliance-auditor/data/eval/: RESULTS.md  qa_dataset.jsonl
blueprints/sentinel-compliance-auditor/data/eval/results/: agentic_20260520_101310.json  agentic_20260522_131704.json  agentic_20260526_155049.json  agentic_20260529_150542.json  agentic_20260529_172926.json  agentic_20260529_173423.json  agentic_20260529_180915.json  agentic_20260529_223420.json  agentic_20260529_223532.json  agentic_20260529_223626.json  agentic_20260529_223702.json  agentic_20260529_223800.json  agentic_20260529_223830.json  agentic_nemotron_20260601_111945.json  agentic_nemotron_20260601_120029.json  agentic_nemotron_20260601_153758.json  agentic_openai_20260521_101537.json  agentic_openai_20260526_173232.json  agentic_openai_20260529_142141.json  agentic_openai_20260529_230940.json  agentic_openai_tavily_20260529_171528.json  agentic_openai_tavily_20260529_232356.json  comparison_20260520_101310.json  comparison_3way_20260521.json
blueprints/sentinel-compliance-auditor/data/regulations/: README.md  eu_ai_act_2021_commission_proposal.txt  nist_ai_600_1_genai_profile.txt  nist_ai_rmf_100_1.txt  nist_ai_rmf_100_1_draft1_2022.txt  nist_ai_rmf_100_1_draft2_2022.txt  sr_11_7_occ_model_risk_management.txt
blueprints/sentinel-compliance-auditor/scripts/: compare_audit_runs.py  convert_ecfr_xml_to_txt.py  extract_pdf_text.py  generate_sops.py  inspect_tool_calls.py  run_qa_eval.py  sop_taxonomy.py  validate_run.py
blueprints/sentinel-compliance-auditor/sentinel/: config.py  models.py
blueprints/sentinel-compliance-auditor/sentinel/actuation/: __init__.py  jira_client.py
blueprints/sentinel-compliance-auditor/sentinel/eval/: __init__.py  agentic_qa.py  judge.py  metrics.py  naive_rag.py
blueprints/sentinel-compliance-auditor/sentinel/graph/: agent.py  naive_agent.py  tools.py
blueprints/sentinel-compliance-auditor/sentinel/retrieval/: ingest_regulations.py  regulations.py
blueprints/sentinel-compliance-auditor/tests/: conftest.py  test_json_parsing.py  test_list_sops_tool.py  test_sop_loading.py  test_stream_token_counting.py
blueprints/sentinel-compliance-auditor/ui/: server.py
blueprints/sentinel-compliance-auditor/ui/static/: app-forge.jsx  data.js  forge-api.js  forge-tokens.css  index.html
blueprints/sentinel-compliance-auditor/ui/static/components-forge/: audit.jsx  compare.jsx  eval.jsx  primitives.jsx  shell.jsx
cookbooks/02-domain-knowledge-pinecone-nexus/: .env.example  Makefile  README.md  README.vectorization.md  pyproject.toml  recipe.json
cookbooks/02-domain-knowledge-pinecone-nexus/app/: __init__.py  config.py  main.py
cookbooks/02-domain-knowledge-pinecone-nexus/app/core/: book_rag.py  nebius_pricing.py
cookbooks/02-domain-knowledge-pinecone-nexus/app/routes/: agent.py  health.py
cookbooks/02-domain-knowledge-pinecone-nexus/scripts/: query_goodreads_pinecone.py  run_vectorize_goodreads.sh  vectorize_goodreads_to_pinecone.py
cookbooks/02-domain-knowledge-pinecone-nexus/tests/: __init__.py  conftest.py  test_agent.py
cookbooks/08-adding-guardrails-langchain/: .env.example  README.md  pyproject.toml  recipe.json
cookbooks/08-adding-guardrails-langchain/app/: config.py  main.py
cookbooks/08-adding-guardrails-langchain/app/core/: agent.py  guardrails.py  langsmith_observability.py  long_term_memory.py  nebius_client.py  rate_limit.py  thread_memory.py
cookbooks/08-adding-guardrails-langchain/app/observability/: metrics.py
cookbooks/08-adding-guardrails-langchain/app/routes/: agent.py  threads.py
cookbooks/08-adding-guardrails-langchain/tests/: conftest.py  test_agent.py  test_guardrails.py
cookbooks/_template/: .env.example  README.md  pyproject.toml  recipe.json
cookbooks/_template/app/: config.py  main.py
cookbooks/_template/app/core/: agent.py  nebius_client.py
cookbooks/_template/app/observability/: metrics.py
cookbooks/_template/app/routes/: agent.py
cookbooks/_template/tests/: test_agent.py
data/: README.md
docs/: adding-a-cookbook.md  architecture.md  deployment.md  rate-limiting.md
schemas/: blueprint.schema.json  readme-config.schema.json  recipe.schema.json
scripts/: build-blueprints.ts  (+10 more)
(+174 files in other folders)
