[project]
name = "sentinel-agent"
version = "0.1.0"
description = "Regulatory & Compliance Auditor Agent — Nebius Blueprint for Agents"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.0",
    "langchain>=1.3.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.8.0",
    "openai>=1.30.0",
    "pinecone>=5.0.0",
    "tavily-python>=0.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["sentinel*"]

[project.optional-dependencies]
deep = ["deepagents>=0.6.0"]
dev = ["pytest", "ruff", "langgraph-cli[inmem]>=0.2.0"]
rag = ["pypdf>=4.0.0"]
ui = ["fastapi>=0.115.0", "uvicorn>=0.34.0", "langgraph-sdk>=0.1.60"]
