[project]
name = "domain-knowledge-pinecone-nexus"
version = "0.1.0"
description = "Vectorization tooling for the Pinecone Nexus cookbook scaffold."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pinecone>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "S", "RUF"]
ignore = [
    "S101",
    "S104",
    "B008",
]

[tool.ruff.format]
quote-style = "double"
