[project]
name = "cookbook-template"
version = "0.1.0"
description = "Cookbook template — replace with the recipe description."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.50",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.0",
    "structlog>=24.4",
    "slowapi>=0.1.9",
    "prometheus-client>=0.21",
    "httpx>=0.27",
    "tenacity>=9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.7",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "S", "RUF"]
ignore = [
    "S101",  # asserts allowed in tests
    "S104",  # binding to 0.0.0.0 is intentional for a containerized service
    "B008",  # FastAPI uses Depends() in argument defaults by design
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
